feat: ensure categories catalog is seeded and idempotent